# user-service

./: README.md  docker-compose.yaml  pyproject.toml
app/: consumer.py  controllers.py  main.py  middleware.py  mq.py  rabbitmq.py  repositories.py  schemas.py  services.py
consumer/: main.py
rabbitmq/: definitions.json
