[tool.poetry]
name = "user-service"
version = "0.0.1"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1"
litestar = { extras = ["standard"], version = "^2" }
litestar-granian = "^0"
litestar-asyncpg = "^0"
advanced-alchemy = "^0.20"
msgspec = "^0.18.6"
structlog = "^24"
aio-pika = "^9.5.4"
faststream = { extras = ["cli"], version = "^0.5.34" }
